[gd_scene load_steps=4 format=3 uid="uid://1hcqoorar1vt"]

[ext_resource type="Script" path="res://GeneralPrefabs/InterativeArea.gd" id="1_b5yg4"]
[ext_resource type="Texture2D" uid="uid://chmoyd0xoymqu" path="res://UI/Sprites/LupaSign.png" id="1_w1fo5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_etjqp"]
radius = 48.0104

[node name="InteractiveArea" type="Area2D"]
collision_layer = 32768
collision_mask = 258
script = ExtResource("1_b5yg4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_etjqp")

[node name="LupaSign" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(2, 2)
texture = ExtResource("1_w1fo5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
